use positive margins for alignment to avoid overflow
Also fix the alignment to be correct for all views.

--- a/defaults/data/headlines-view.css
+++ b/defaults/data/headlines-view.css
@@ -1,9 +1,9 @@
 body.headlines-view .full-container {
-    margin-left: -50px;
+    margin-right: 100px;
 }
 
 body.headlines-view.multiple-feeds .full-container {
-    margin-left: -100px;
+    margin-right: 100px;
 }
 
 article.headline > .full-container {
